src/main/antlr4/es/uva/inf/grammar/.antlr/GrammarParser.java
// Generated from c:\Users\Propietario\Documents\DOCUMENTOS-TFG\MVN-Bazaco\mvnbazaco\src\main\antlr4\es\u005Cuva\inf\grammar\Grammar.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, CommentOrEncoding=58, 
		Group=59, Star=60, Div=61, Less=62, LessEqual=63, Greater=64, GreaterEqual=65, 
		Equal=66, TwoEqual=67, NotEqual=68, Exclamation=69, DataEquationOp=70, 
		StringAssignOp=71, Id=72, FloatingConstNumber=73, FractionalConstant=74, 
		ExponentPart=75, DigitSeq=76, StringLiteral=77, StringConst=78, Keyword=79, 
		Whitespace=80, Backslash=81, INFO_UNIT=82, OtherCaracter=83;
	public static final int
		RULE_file = 0, RULE_model = 1, RULE_sketchesGraphsAndMetadata = 2, RULE_symbolWithDoc = 3, 
		RULE_symbolWithDocDefinition = 4, RULE_subscriptRange = 5, RULE_subscriptSequence = 6, 
		RULE_subscriptMappingList = 7, RULE_subscriptMapping = 8, RULE_equation = 9, 
		RULE_lhs = 10, RULE_subscriptCopy = 11, RULE_unchangeableConstant = 12, 
		RULE_dataEquation = 13, RULE_lookupDefinition = 14, RULE_constraint = 15, 
		RULE_realityCheck = 16, RULE_stringAssign = 17, RULE_macroDefinition = 18, 
		RULE_expr = 19, RULE_exprAllowSign = 20, RULE_call = 21, RULE_macroHeader = 22, 
		RULE_macroArguments = 23, RULE_exprList = 24, RULE_subscriptValueList = 25, 
		RULE_indexList = 26, RULE_subscript = 27, RULE_lookup = 28, RULE_lookupRange = 29, 
		RULE_lookupPointList = 30, RULE_referenceLine = 31, RULE_lookupPoint = 32, 
		RULE_constantLine = 33, RULE_constList = 34, RULE_numberList = 35, RULE_graphs = 36, 
		RULE_graph = 37, RULE_title = 38, RULE_xaxis = 39, RULE_xlabel = 40, RULE_xdiv = 41, 
		RULE_yaxis = 42, RULE_ylabel = 43, RULE_ydiv = 44, RULE_xmin = 45, RULE_xmax = 46, 
		RULE_nolegend = 47, RULE_scale = 48, RULE_graphvar = 49, RULE_gvar = 50, 
		RULE_ymin = 51, RULE_ymax = 52, RULE_linewidthgraph = 53, RULE_metadata = 54, 
		RULE_sketches = 55, RULE_sketchesDelimiter = 56, RULE_viewInfo = 57, RULE_sketchInfo = 58, 
		RULE_versionCode = 59, RULE_viewName = 60, RULE_viewSettings = 61, RULE_viewVariables = 62, 
		RULE_shadowVariable = 63, RULE_lastShadowPart = 64, RULE_textVariable = 65, 
		RULE_lastTextVarPart = 66, RULE_objectVariable = 67, RULE_arrow = 68, 
		RULE_points = 69, RULE_rawText = 70, RULE_rawTextObjects = 71, RULE_link = 72, 
		RULE_subscriptId = 73, RULE_constVensim = 74, RULE_integerConst = 75, 
		RULE_floatingConst = 76, RULE_unitsDoc = 77;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "model", "sketchesGraphsAndMetadata", "symbolWithDoc", "symbolWithDocDefinition", 
			"subscriptRange", "subscriptSequence", "subscriptMappingList", "subscriptMapping", 
			"equation", "lhs", "subscriptCopy", "unchangeableConstant", "dataEquation", 
			"lookupDefinition", "constraint", "realityCheck", "stringAssign", "macroDefinition", 
			"expr", "exprAllowSign", "call", "macroHeader", "macroArguments", "exprList", 
			"subscriptValueList", "indexList", "subscript", "lookup", "lookupRange", 
			"lookupPointList", "referenceLine", "lookupPoint", "constantLine", "constList", 
			"numberList", "graphs", "graph", "title", "xaxis", "xlabel", "xdiv", 
			"yaxis", "ylabel", "ydiv", "xmin", "xmax", "nolegend", "scale", "graphvar", 
			"gvar", "ymin", "ymax", "linewidthgraph", "metadata", "sketches", "sketchesDelimiter", 
			"viewInfo", "sketchInfo", "versionCode", "viewName", "viewSettings", 
			"viewVariables", "shadowVariable", "lastShadowPart", "textVariable", 
			"lastTextVarPart", "objectVariable", "arrow", "points", "rawText", "rawTextObjects", 
			"link", "subscriptId", "constVensim", "integerConst", "floatingConst", 
			"unitsDoc"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "'('", "'-'", "')'", "'->'", "','", "':IGNORE:'", "':EXCEPT:'", 
			"'<->'", "':THE CONDITION:'", "':IMPLIES:'", "':TEST INPUT:'", "':MACRO:'", 
			"':END OF MACRO:'", "'^'", "'+'", "':AND:'", "':OR:'", "'DELAYP('", "'TABBED ARRAY('", 
			"'['", "']'", "';'", "':GRAPH'", "':TITLE'", "':X-AXIS'", "':X-LABEL'", 
			"':X-DIV'", "':Y-AXIS'", "':Y-LABEL'", "':Y-DIV'", "':X-MIN'", "':X-MAX'", 
			"':NO-LEGEND'", "':SCALE'", "':VAR'", "':Y-MIN'", "':Y-MAX'", "':LINE-WIDTH'", 
			"':L\u007F<%^E!@'", "'///---'", "'---///'", "'Sketch information - do not modify anything except names'", 
			"'V300  Do not put anything below this section - it will be ignored'", 
			"'$'", "'|'", "'''", "'\"'", "'.'", "'?'", "'&'", "'%'", "'@'", "'http://'", 
			"'https://'", "': https://'", "': http://'", null, null, "'*'", "'/'", 
			"'<'", "'<='", "'>'", "'>='", "'='", "'=='", "'<>'", "'!'", "':='", "':IS:'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "CommentOrEncoding", 
			"Group", "Star", "Div", "Less", "LessEqual", "Greater", "GreaterEqual", 
			"Equal", "TwoEqual", "NotEqual", "Exclamation", "DataEquationOp", "StringAssignOp", 
			"Id", "FloatingConstNumber", "FractionalConstant", "ExponentPart", "DigitSeq", 
			"StringLiteral", "StringConst", "Keyword", "Whitespace", "Backslash", 
			"INFO_UNIT", "OtherCaracter"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public ModelContext model() {
			return getRuleContext(ModelContext.class,0);
		}
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			model();
			setState(157);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModelContext extends ParserRuleContext {
		public List<SymbolWithDocContext> symbolWithDoc() {
			return getRuleContexts(SymbolWithDocContext.class);
		}
		public SymbolWithDocContext symbolWithDoc(int i) {
			return getRuleContext(SymbolWithDocContext.class,i);
		}
		public List<MacroDefinitionContext> macroDefinition() {
			return getRuleContexts(MacroDefinitionContext.class);
		}
		public MacroDefinitionContext macroDefinition(int i) {
			return getRuleContext(MacroDefinitionContext.class,i);
		}
		public SketchesGraphsAndMetadataContext sketchesGraphsAndMetadata() {
			return getRuleContext(SketchesGraphsAndMetadataContext.class,0);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__12 || _la==Id) {
				{
				setState(161);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case Id:
					{
					setState(159);
					symbolWithDoc();
					}
					break;
				case T__12:
					{
					setState(160);
					macroDefinition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(167);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__40 || _la==T__41) {
				{
				setState(166);
				sketchesGraphsAndMetadata();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SketchesGraphsAndMetadataContext extends ParserRuleContext {
		public SketchesContext sketches() {
			return getRuleContext(SketchesContext.class,0);
		}
		public MetadataContext metadata() {
			return getRuleContext(MetadataContext.class,0);
		}
		public List<GraphsContext> graphs() {
			return getRuleContexts(GraphsContext.class);
		}
		public GraphsContext graphs(int i) {
			return getRuleContext(GraphsContext.class,i);
		}
		public SketchesGraphsAndMetadataContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sketchesGraphsAndMetadata; }
	}

	public final SketchesGraphsAndMetadataContext sketchesGraphsAndMetadata() throws RecognitionException {
		SketchesGraphsAndMetadataContext _localctx = new SketchesGraphsAndMetadataContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sketchesGraphsAndMetadata);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			sketches();
			setState(173);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__23) {
				{
				{
				setState(170);
				graphs();
				}
				}
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(176);
			metadata();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymbolWithDocContext extends ParserRuleContext {
		public SymbolWithDocDefinitionContext symbolWithDocDefinition() {
			return getRuleContext(SymbolWithDocDefinitionContext.class,0);
		}
		public UnitsDocContext unitsDoc() {
			return getRuleContext(UnitsDocContext.class,0);
		}
		public SymbolWithDocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolWithDoc; }
	}

	public final SymbolWithDocContext symbolWithDoc() throws RecognitionException {
		SymbolWithDocContext _localctx = new SymbolWithDocContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_symbolWithDoc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			symbolWithDocDefinition();
			setState(179);
			unitsDoc();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymbolWithDocDefinitionContext extends ParserRuleContext {
		public LookupDefinitionContext lookupDefinition() {
			return getRuleContext(LookupDefinitionContext.class,0);
		}
		public SubscriptRangeContext subscriptRange() {
			return getRuleContext(SubscriptRangeContext.class,0);
		}
		public EquationContext equation() {
			return getRuleContext(EquationContext.class,0);
		}
		public ConstraintContext constraint() {
			return getRuleContext(ConstraintContext.class,0);
		}
		public UnchangeableConstantContext unchangeableConstant() {
			return getRuleContext(UnchangeableConstantContext.class,0);
		}
		public DataEquationContext dataEquation() {
			return getRuleContext(DataEquationContext.class,0);
		}
		public StringAssignContext stringAssign() {
			return getRuleContext(StringAssignContext.class,0);
		}
		public SubscriptCopyContext subscriptCopy() {
			return getRuleContext(SubscriptCopyContext.class,0);
		}
		public RealityCheckContext realityCheck() {
			return getRuleContext(RealityCheckContext.class,0);
		}
		public SymbolWithDocDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolWithDocDefinition; }
	}

	public final SymbolWithDocDefinitionContext symbolWithDocDefinition() throws RecognitionException {
		SymbolWithDocDefinitionContext _localctx = new SymbolWithDocDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_symbolWithDocDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(181);
				lookupDefinition();
				}
				break;
			case 2:
				{
				setState(182);
				subscriptRange();
				}
				break;
			case 3:
				{
				setState(183);
				equation();
				}
				break;
			case 4:
				{
				setState(184);
				constraint();
				}
				break;
			case 5:
				{
				setState(185);
				unchangeableConstant();
				}
				break;
			case 6:
				{
				setState(186);
				dataEquation();
				}
				break;
			case 7:
				{
				setState(187);
				stringAssign();
				}
				break;
			case 8:
				{
				setState(188);
				subscriptCopy();
				}
				break;
			case 9:
				{
				setState(189);
				realityCheck();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubscriptRangeContext extends ParserRuleContext {
		public TerminalNode Id() { return getToken(GrammarParser.Id, 0); }
		public SubscriptSequenceContext subscriptSequence() {
			return getRuleContext(SubscriptSequenceContext.class,0);
		}
		public SubscriptValueListContext subscriptValueList() {
			return getRuleContext(SubscriptValueListContext.class,0);
		}
		public CallContext call() {
			return getRuleContext(CallContext.class,0);
		}
		public SubscriptMappingListContext subscriptMappingList() {
			return getRuleContext(SubscriptMappingListContext.class,0);
		}
		public SubscriptRangeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptRange; }
	}

	public final SubscriptRangeContext subscriptRange() throws RecognitionException {
		SubscriptRangeContext _localctx = new SubscriptRangeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_subscriptRange);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			match(Id);
			setState(193);
			match(T__0);
			setState(197);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(194);
				subscriptSequence();
				}
				break;
			case 2:
				{
				setState(195);
				subscriptValueList();
				}
				break;
			case 3:
				{
				setState(196);
				call();
				}
				break;
			}
			setState(200);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(199);
				subscriptMappingList();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubscriptSequenceContext extends ParserRuleContext {
		public Token start;
		public Token end;
		public List<TerminalNode> Id() { return getTokens(GrammarParser.Id); }
		public TerminalNode Id(int i) {
			return getToken(GrammarParser.Id, i);
		}
		public SubscriptSequenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptSequence; }
	}

	public final SubscriptSequenceContext subscriptSequence() throws RecognitionException {
		SubscriptSequenceContext _localctx = new SubscriptSequenceContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_subscriptSequence);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(202);
			match(T__1);
			setState(203);
			((SubscriptSequenceContext)_localctx).start = match(Id);
			setState(204);
			match(T__2);
			setState(205);
			((SubscriptSequenceContext)_localctx).end = match(Id);
			setState(206);
			match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubscriptMappingListContext extends ParserRuleContext {
		public List<SubscriptMappingContext> subscriptMapping() {
			return getRuleContexts(SubscriptMappingContext.class);
		}
		public SubscriptMappingContext subscriptMapping(int i) {
			return getRuleContext(SubscriptMappingContext.class,i);
		}
		public SubscriptMappingListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptMappingList; }
	}

	public final SubscriptMappingListContext subscriptMappingList() throws RecognitionException {
		SubscriptMappingListContext _localctx = new SubscriptMappingListContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_subscriptMappingList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(208);
			match(T__4);
			setState(209);
			subscriptMapping();
			setState(214);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__5) {
				{
				{
				setState(210);
				match(T__5);
				setState(211);
				subscriptMapping();
				}
				}
				setState(216);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SubscriptMappingContext extends ParserRuleContext {
		public TerminalNode Id() { return getToken(GrammarParser.Id, 0); }
		public IndexListContext indexList() {
			return getRuleContext(IndexListContext.class,0);
		}
		public SubscriptMappingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_subscriptMapping; }
	}
